--- a/DailyChallenge/popup.html
+++ b/DailyChallenge/popup.html
@@ -23,11 +23,14 @@
         max-width: 400px;
       }
     </style>
-    <script src="popup.js"></script>
+    <!--<script src="popup.js"></script>-->
+    <script type="text/javascript" src="popup.js"></script>
     <link rel="stylesheet" href="myStyles.css">
   </head>
   <body bgcolor="#5cc7b2">
     <script type="text/javascript" src="jquery.js"></script>
     <h1>Today's Question</h1>
+    <h2 id="question"></h2>
+    <h2 id ="q2"></h2>
   </body>
 </html>
