Nice font, and centered
Now I have to add a button to go onto the next and previous question, and will save your current position.

--- a/DailyChallenge/popup.html
+++ b/DailyChallenge/popup.html
@@ -23,11 +23,10 @@
         max-width: 400px;
       }
     </style>
-    <!--<script src="popup.js"></script>-->
     <script type="text/javascript" src="popup.js"></script>
     <link rel="stylesheet" href="myStyles.css">
   </head>
-  <body bgcolor="#5cc7b2">
+  <body bgcolor="Black">
     <script type="text/javascript" src="jquery.js"></script>
     <h1>Today's Question</h1>
     <h2 id="question"></h2>
