Minimum viable product
It works! Now I just have to put it on the chrome web store, and improve upon it in future iterations, but I got a midterm an hour.

--- a/DailyChallenge/popup.html
+++ b/DailyChallenge/popup.html
@@ -28,8 +28,13 @@
   </head>
   <body bgcolor="Black">
     <script type="text/javascript" src="jquery.js"></script>
-    <h1>Today's Question</h1>
+    <center>
+    <h1 id ="questionName"></h1>
     <h2 id="question"></h2>
-    <h2 id ="q2"></h2>
+    <a id ="questionLink"></a>
+    <br/>
+    <br/>
+    <button id="prev" type="button">Previous</button>
+    <button id="next" type="button">Next></button>
   </body>
 </html>
